Adicionando novas paginas ao projeto com conteudo, foram feitas mais duas pastas para melhor organizar o projeto.
foram criadas pastas pagina_monstro para paginas que vão ser  semelhantes e assim melhor organizar e separar e também a foi criada a pasta monstro_imagens para imagens mais especificas

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -29,7 +29,7 @@
               </span>
               </a>
           </li>
-          <li class="menu-item"><a href="#" target="_blank" rel="author">
+          <li class="menu-item"><a href="../ex001/monstros.html" target="_blank" rel="author">
             <i class="fa-solid fa-book"></i>
               <span class="item-descricao">
                 Monstros
@@ -94,6 +94,7 @@
     </nav>
     </header>
   <div class="principal">
+    <!--colocando barra de pesquisa na pagina-->
     <div class="buscar-box">
       <div class="lupa-buscar">
         <i class="fa-solid fa-magnifying-glass"></i>
@@ -191,9 +192,9 @@
   </div>
   <hr>
 <div class="iframe">
-  <p> versão do youtube</p>
+  <p>Intro do monstro</p>
   <!--Usando a tag iframe para chamar um video upado no youtube para a pagina-->
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/cLQzf9XtrR0?si=Vixr3VmEwZXJ5V9y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/PAOOWUMm4Es?si=2tneuorzqwXrxSSW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   <hr>
   </div>
